--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -1,6 +1,8 @@
 tasks:
   unit-test:
     runner: razorci/php:7.4
+      script:
+      - vendor/bin/phpunit --configuration phpunit_mysql.xml --coverage-text
     steps:
     - checkout
     - commands:
