--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -1,9 +1,12 @@
 tasks:
+cache:
+  paths:
+  - vendor/
   unit-test:
     runner: razorci/php:7.4
-  script:
-  - vendor/bin/phpunit --configuration phpunit_mysql.xml --coverage-text
     steps:
     - checkout
     - commands:
+     script:
+      - vendor/bin/phpunit --configuration phpunit_mysql.xml --coverage-text
       - php server.php
