--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -5,4 +5,4 @@ tasks:
     - checkout
     - commands:
       - php --version
-      sudo curl -sS https://getcomposer.org/installer | php
+      - sudo curl -sS https://getcomposer.org/installer | php
