--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -6,5 +6,5 @@ tasks:
     - commands:
       - php --version
       - sudo curl -sS https://getcomposer.org/installer | php
-      - composer --version
+      - php composer.phar
       - php artisan test'
