--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -7,4 +7,4 @@ tasks:
       - php --version
       - sudo curl -sS https://getcomposer.org/installer | php
       - php composer.phar
-      - php artisan test'
+      - php artisan test
