--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -9,4 +9,5 @@ tasks:
       - php composer.phar
       - php composer.phar update --no-scripts
       - php artisan key:generate
-      - php artisan test
+      - php artisan config:cache
+      - php artisan serve
