--- a/.razorops.yaml
+++ b/.razorops.yaml
@@ -11,4 +11,4 @@ tasks:
       - cp .env.example .env
       - php artisan key:generate
       - php artisan config:cache
-      - php artisan serve
+      - php artisan test
